<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C947DF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/angry"
        android:layout_width="500dp"
        android:layout_height="527dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/angry"
        android:contentDescription="@string/angry" />

    <TextView
        android:id="@+id/hungry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:text="@string/i_m_so_hungry_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F1F1F1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angry"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cookie"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:background="#9A9A9A"
        android:text="@string/eat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungry" />
</androidx.constraintlayout.widget.ConstraintLayout>